// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category template should render correctly 1`] = `
<div
  className="sc-jJoQJp gJYTLH"
>
  <h1
    className="sc-jRQBWg jNFyNc"
  >
    Category A
  </h1>
  <div
    className="sc-gWXbKe gOBwyS"
  >
    <span
      className="sc-jcFjpl blLcRs"
      size="2rem"
    />
  </div>
  <div
    className="sc-hiCibw hgPGCG"
  >
    <span
      className="sc-jcFjpl CNaIg"
      size="4rem"
    />
  </div>
</div>
`;

exports[`category template should render correctly 2`] = `
<div
  className="sc-jJoQJp gJYTLH"
>
  <h1
    className="sc-jRQBWg jNFyNc"
  >
    Category B
  </h1>
  <div
    className="sc-gWXbKe gOBwyS"
  >
    <span
      className="sc-jcFjpl blLcRs"
      size="2rem"
    />
  </div>
  <div
    className="sc-hiCibw hgPGCG"
  >
    <span
      className="sc-jcFjpl CNaIg"
      size="4rem"
    />
  </div>
</div>
`;
